--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -1,7 +1,7 @@
 ## first experimental test
 
 name: build-and-test
-run-name: ${{ github actor }} is running  GitHub Actions
+run-name: ${{ github.actor }} is running  GitHub Actions
 on:
   push:
     branches:
