--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -19,15 +19,10 @@ on:
 env:
   PUBLIC_REGISTRY: quay.io/signalfx
   REGISTRY_IMAGE_PREFIX: splunk-network-explorer-
-  BENV_IMAGE:
-    value: quay.io/splunko11ytest/network-explorer-debug/benv-final:latest
-    description: Build environment image to use for building.
-  MAVEN_REPOSITORY_URL:
-    value: https://repo.splunk.com/artifactory/maven
-    description: Maven repository used for pulling Java dependencies.
-  GOPROXY:
-    value: https://repo.splunk.com/artifactory/go
-    description: Proxy used when pulling Go modules.
+  BENV_IMAGE: quay.io/splunko11ytest/network-explorer-debug/benv-final:latest   
+  MAVEN_REPOSITORY_URL: https://repo.splunk.com/artifactory/maven
+  GOPROXY: https://repo.splunk.com/artifactory/go
+   
 
 concurrency:
   group: build-and-test-${{ github.event.pull_request_number || github.ref }}
