--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -47,7 +47,9 @@ jobs:
       run: | 
         sudo apt update
         sudo apt install -y clang-format-11
- #       ./.github/scripts/check-clang-format.sh 
+        cd ${{ github.workspace }}
+        cd .github
+        ./scripts/check-clang-format.sh 
 
   build-and-unit-test:
     name: build-and-unit-test
