--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -49,7 +49,8 @@ jobs:
         sudo apt install -y clang-format-11
         cd ${{ github.workspace }}
         cd .github
-        ./scripts/check-clang-format.sh 
+        pwd
+   #     ./scripts/check-clang-format.sh 
 
   build-and-unit-test:
     name: build-and-unit-test
