--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -48,7 +48,7 @@ jobs:
         sudo apt update
         sudo apt install -y clang-format-11
         cd ${{ github.workspace }}
-        cd .github/scripts
+        cd .github/workflows/scripts
         pwd
         ./check-clang-format.sh 
 
