--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -48,9 +48,8 @@ jobs:
         sudo apt update
         sudo apt install -y clang-format-11
         cd ${{ github.workspace }}
-        cd .github/workflows/scripts
         pwd
-        ./check-clang-format.sh 
+        ./.github/workflows/scripts/check-clang-format.sh 
 
   build-and-unit-test:
     name: build-and-unit-test
