--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -63,12 +63,4 @@ jobs:
       run: |
         cd ${{ github.workspace }}
         git submodule update  --init --recursive --jobs 4
-        docker run \
-          -it --rm \
-          --mount "type=bind,source=/var/run/docker.sock,destination=/var/run/docker.sock" \
-          --mount "type=bind,source=$(git rev-parse --show-toplevel),destination=/root/src,readonly" \
-          --env EBPF_NET_SRC=/root/src \
-          --env EBPF_NET_OUT_DIR=/root/out \
-          --workdir=/root/out \
-          build-env \
-            ../build.sh docker
+        ./github/workflows/scripts/build.sh
