--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -63,4 +63,13 @@ jobs:
       run: |
         cd ${{ github.workspace }}
         git submodule update  --init --recursive --jobs 4
-        ./.github/workflows/scripts/build.sh
+     #   ./.github/workflows/scripts/build.sh
+        docker run -t \
+        --rm \
+        --mount "type=bind,source=/var/run/docker.sock,destination=/var/run/docker.sock" \
+        --mount "type=bind,source=$(git rev-parse --show-toplevel),destination=/root/src,readonly" \
+        --env EBPF_NET_SRC=/root/src \
+        --env EBPF_NET_OUT_DIR=/root/out \
+        --workdir=/root/out \
+        build-env \
+        ../build.sh docker
