--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -19,10 +19,10 @@ on:
 env:
   PUBLIC_REGISTRY: quay.io/signalfx
   REGISTRY_IMAGE_PREFIX: splunk-network-explorer-
-  BENV_IMAGE: quay.io/splunko11ytest/network-explorer-debug/benv-final:latest   
+  BENV_IMAGE: quay.io/splunko11ytest/network-explorer-debug/benv-final:latest
   MAVEN_REPOSITORY_URL: https://repo.splunk.com/artifactory/maven
   GOPROXY: https://repo.splunk.com/artifactory/go
-   
+
 
 concurrency:
   group: build-and-test-${{ github.event.pull_request_number || github.ref }}
@@ -39,17 +39,16 @@ jobs:
         echo "pr.ref = ${{github.event.pull_request.head.ref}}"
         echo "github.ref = ${{ github.ref }}"
         echo "$GITHUB_CONTEXT"
-    
+
     - name: Check out the codebase
       uses: actions/checkout@v3
 
     - name: Runs format checker
-      run: | 
+      run: |
         sudo apt update
         sudo apt install -y clang-format-11
         cd ${{ github.workspace }}
-        pwd
-    #    ./.github/workflows/scripts/check-clang-format.sh 
+    #    ./.github/workflows/scripts/check-clang-format.sh
 
   build-and-unit-test:
     name: build-and-unit-test
@@ -59,11 +58,10 @@ jobs:
     - name: Check out the codebase
       uses: actions/checkout@v3
 
-    - name: build-and-unit-test
+    - name: build images
       run: |
         cd ${{ github.workspace }}
         git submodule update  --init --recursive --jobs 4
-     #   ./.github/workflows/scripts/build.sh
         docker run -t \
         --rm \
         --mount "type=bind,source=/var/run/docker.sock,destination=/var/run/docker.sock" \
