--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -57,6 +57,8 @@ jobs:
     steps:
     - name: Check out the codebase
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: build images
       run: |
