--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -51,7 +51,7 @@ jobs:
  #commenting out checker for now as it fails    ./.github/workflows/scripts/check-clang-format.sh
 
   build-images:
-    name: build-and-unit-test
+    name: build-images
     runs-on: ubuntu-20.04
     needs: [clang-format-check]
     steps:
@@ -78,6 +78,7 @@ jobs:
   run-unit-tests:
     name: run-unit-tests
     runs-on: ubuntu-20.04
+    needs: [clang-format-check]
     steps:
     - name: Checkout the codebase
       uses: actions/checkout@v3
@@ -91,7 +92,7 @@ jobs:
         --mount "type=bind,source=/var/run/docker.sock,destination=/var/run/docker.sock" \
         --mount "type=bind,source=$(git rev-parse --show-toplevel),destination=/root/src,readonly" \
         --env EBPF_NET_SRC=/root/src \
-        --env EBPF_NET_OUT_DIR=/root/out \
-        --workdir=/root/out \
+        --env EBPF_NET_OUT_DIR=/root/out-test \
+        --workdir=/root/out-test \
         $BENV_IMAGE \
         ../build.sh unit_tests test
