--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
   pull_request:
-    
+
 
 env:
   BENV_IMAGE: quay.io/splunko11ytest/network-explorer-debug/benv-final
@@ -165,7 +165,7 @@ jobs:
         --env EBPF_NET_OUT_DIR=/root/out \
         --workdir=/root/out \
         $BENV_IMAGE \
-        ../build.sh k8s-watcher        
+        ../build.sh k8s-watcher
 
   build-run-unit-tests:
     name: build-run-unit-tests
@@ -190,3 +190,27 @@ jobs:
         --workdir=/root/out-test \
         $BENV_IMAGE \
         ../build.sh unit_tests test
+
+  build-run-unit-tests-with-asan-and-debug-flags:
+    name: build-run-unit-tests-with-asan-and-debug-flags
+    runs-on: ubuntu-20.04
+    needs: [clang-format-check]
+    steps:
+    - name: Check out the codebase
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: build unit tests with asan and debug flags on then run all tests
+      run: |
+        echo "github.workspace = ${{ github.workspace }}"
+        docker pull $BENV_IMAGE
+        git submodule update  --init --recursive
+        docker run -t \
+        --rm \
+        --mount "type=bind,source=/var/run/docker.sock,destination=/var/run/docker.sock" \
+        --mount "type=bind,source=$(git rev-parse --show-toplevel),destination=/root/src,readonly" \
+        --env EBPF_NET_SRC=/root/src \
+        --env EBPF_NET_OUT_DIR=/root/out-test \
+        --workdir=/root/out-test \
+        $BENV_IMAGE \
+        ../build.sh --debug --asan unit_tests test
