first attempt to run kernel header tests

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -231,6 +231,7 @@ jobs:
       pull_request:
         paths:
         - collector/kernel/**
+        - .github/**
     steps:
     - name: Check out the codebase
       uses: actions/checkout@v3
