--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -219,32 +219,24 @@ jobs:
 
   run-kernel-header-tests:
     name: run-kernel-header-tests
-    runs-on: ubuntu-20.04
-    on:
-      push:
-        paths:
-        - collector/kernel/**
-        - .github/**
-        branches:
-        - main
-      pull_request:
-        paths:
-        - collector/kernel/**
-        - .github/**
+    runs-on: ubuntu-latest
     steps:
     - name: Check out the codebase
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - name: Print github workspace
-      run: |
-        echo "github.workspace = ${{ github.workspace }}"
-        echo "pr.ref = ${{github.event.pull_request.head.ref}}"
-        echo "github.ref = ${{ github.ref }}"
-        echo "$GITHUB_CONTEXT"
+    - uses: dorny/paths-filter@v2
+      id: changes
+      with:
+        filters: |
+          kernel:
+            - 'collector/kernel-collector/**'
+          github:  
+            - '.github/**'    
 
-    - name: run kernel headers tests for multiple linux distrobutions
+    - name: run kernel headers tests for multiple linux distributions
+      if: steps.changes.outputs.kernel == 'true' || steps.filter.outputs.github == 'true'
       run: |
         sudo apt update
         sudo apt install -y vagrant
