--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -230,22 +230,28 @@ jobs:
       id: changes
       with:
         filters: |
+          kernel:
+            - 'collector/kernel/**'
           github:  
             - '.github/**'    
 
-    - name: run kernel headers tests for multiple linux distributions
-      if: steps.filter.outputs.github == 'true'
+    - name: Run kernel headers test for multiple linux distributions
+      if: steps.changes.outputs.kernel == 'true' || steps.filter.outputs.github == 'true'
       run: |
-        sudo apt update
-        sudo apt install -y vagrant
-        sudo apt install -y vagrant-sshfs
+        echo "github.workspace = ${{ github.workspace }}"
+        apt update
+        apt install -y vagrant
+        apt install -y vagrant-sshfs
         vagrant plugin install vagrant
         curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-        sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-        sudo apt update
-        sudo apt install -y packer
-        sudo apt install -y jq
-        sudo apt install -y virtualbox
+        apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+        apt update
+        apt install -y packer
+        apt install -y jq
+        apt install -y virtualbox
         docker pull $KERNEL_COLLECTOR_IMAGE
         docker pull $REDUCER_IMAGE
         ./test/kernel-headers/run-tests.sh
+    - name: Check on failures
+      if: steps.hello.outcome != 'success' || steps.world.outcome != 'success'
+      run: exit 1    
