--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -13,7 +13,7 @@ on:
 env:
   BENV_IMAGE: quay.io/splunko11ytest/network-explorer-debug/benv-final
   KERNEL_COLLECTOR_IMAGE: quay.io/splunko11ytest/network-explorer-debug/kernel-collector:bj-latest
-  REDUCER_IMAGE:  quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest
+  REDUCER_IMAGE:  quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest 
 
 
 concurrency:
@@ -243,7 +243,7 @@ jobs:
         apt install -y vagrant
         apt install -y vagrant-sshfs
         vagrant plugin install vagrant
-        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+        curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
         apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
         apt update
         apt install -y packer
