--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -12,9 +12,6 @@ on:
 
 env:
   BENV_IMAGE: quay.io/splunko11ytest/network-explorer-debug/benv-final
-  KERNEL_COLLECTOR_IMAGE: quay.io/splunko11ytest/network-explorer-debug/kernel-collector:bj-latest
-  REDUCER_IMAGE:  quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest 
-
 
 concurrency:
   group: build-and-test-${{ github.event.pull_request_number || github.ref }}
@@ -203,8 +200,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: build unit tests with asan and debug flags on then run all tests
-      run: |
-        echo "github.workspace = ${{ github.workspace }}"
+      run: |shell: /usr/bin/bash -e {0}kspace = ${{ github.workspace }}"
         docker pull $BENV_IMAGE
         git submodule update  --init --recursive
         docker run -t \
@@ -237,10 +233,12 @@ jobs:
 
     - name: Run kernel headers test for multiple linux distributions
       if: steps.changes.outputs.kernel == 'true' || steps.filter.outputs.github == 'true'
+      env: 
+        KERNEL_COLLECTOR_IMAGE: quay.io/splunko11ytest/network-explorer-debug/kernel-collector:bj-latest
+        REDUCER_IMAGE:  quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest 
       run: |
-        echo "github.workspace = ${{ github.workspace }}"
-        apt update
-        apt install -y vagrant
+        sudo apt update
+        sudo apt install -y vagrant
        # apt install -y vagrant-sshfs
        # vagrant plugin install vagrant
        # curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
@@ -249,8 +247,8 @@ jobs:
        # apt install -y packer
       #  apt install -y jq
       #  apt install -y virtualbox
-      #  docker pull $KERNEL_COLLECTOR_IMAGE
-      #  docker pull $REDUCER_IMAGE
+      docker pull $KERNEL_COLLECTOR_IMAGE
+      docker pull $REDUCER_IMAGE
        # ./test/kernel-headers/run-tests.sh
     - name: Check on failures
       if: steps.hello.outcome != 'success' || steps.world.outcome != 'success'
