--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -233,23 +233,12 @@ jobs:
      
     - name: Run kernel headers test for multiple linux distributions
       if: steps.changes.outputs.kernel == 'true' || steps.filter.outputs.github == 'true'
-      env: 
-        KERNEL_COLLECTOR_IMAGE: quay.io/splunko11ytest/network-explorer-debug/kernel-collector:bj-latest
-        REDUCER_IMAGE:  quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest 
       run: |
         sudo apt update
         sudo apt install -y vagrant
-        docker pull $KERNEL_COLLECTOR_IMAGE
-        docker pull $REDUCER_IMAGE
-       # apt install -y vagrant-sshfs
-       # vagrant plugin install vagrant
-       # curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
-       # apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-       # apt update
-       # apt install -y packer
-       #  apt install -y jq
-       #  apt install -y virtualbox
-       # ./test/kernel-headers/run-tests.sh
+        docker pull quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest 
+        docker pull quay.io/splunko11ytest/network-explorer-debug/kernel-collector:bj-latest
+        
     - name: Check on failures
       if: steps.hello.outcome != 'success' || steps.world.outcome != 'success'
       run: exit 1    
