--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -232,13 +232,13 @@ jobs:
             - '.github/**'
      
     - name: Run kernel headers test for multiple linux distributions
-      if: steps.changes.outputs.kernel == 'true' || steps.filter.outputs.github == 'true'
+      if: steps.changes.outputs.kernel == 'true' || steps.changes.outputs.github == 'true'
       run: |
         sudo apt update
         sudo apt install -y vagrant
         docker pull quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest 
         docker pull quay.io/splunko11ytest/network-explorer-debug/kernel-collector:bj-latest
-        
+
     - name: Check on failures
       if: steps.hello.outcome != 'success' || steps.world.outcome != 'success'
       run: exit 1    
