--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -12,6 +12,8 @@ on:
 
 env:
   BENV_IMAGE: quay.io/splunko11ytest/network-explorer-debug/benv-final
+  KERNEL_COLLECTOR_IMAGE: quay.io/splunko11ytest/network-explorer-debug/kernel-collector:bj-latest 
+  REDUCER_IMAGE: quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest
 
 concurrency:
   group: build-and-test-${{ github.event.pull_request_number || github.ref }}
@@ -232,13 +234,23 @@ jobs:
             - '.github/**'
      
     - name: Run kernel headers test for multiple linux distributions
+      id: run-kernel-header-tests
       if: steps.changes.outputs.kernel == 'true' || steps.changes.outputs.github == 'true'
       run: |
         sudo apt update
         sudo apt install -y vagrant
         docker pull quay.io/splunko11ytest/network-explorer-debug/reducer:bj-latest 
         docker pull quay.io/splunko11ytest/network-explorer-debug/kernel-collector:bj-latest
+        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+        sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+        sudo apt update
+        sudo apt install -y packer
+        sudo apt install -y jq
+        sudo apt install -y virtualbox
+        chmod a+x test/kernel-headers/run-tests.sh
+        ./test/kernel-headers/run-tests.sh
+
 
     - name: Check on failures
-      if: steps.hello.outcome != 'success' || steps.world.outcome != 'success'
+      if: steps.run-kernel-header-tests.outcome != 'success'
       run: exit 1    
