--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -217,7 +217,7 @@ jobs:
 
   run-kernel-header-tests:
     name: run-kernel-header-tests
-    runs-on: ubuntu-latest
+    runs-on: macos-12
     steps:
     - name: Check out the codebase
       uses: actions/checkout@v3
