--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -230,21 +230,21 @@ jobs:
         filters: |
           kernel:
             - 'collector/kernel/**'
-          github:  
+          github:
             - '.github/**'
-     
+
     - name: Run kernel headers test for multiple linux distributions
       id: run-kernel-header-tests
       if: steps.changes.outputs.kernel == 'true' || steps.changes.outputs.github == 'true'
       run: |
-        brew install docker docker-machine
-        docker-machine env default
-        eval "$(docker-machine env default)"
+        brew install --cask docker
         docker run hello-world
-        docker-machine stop default
+        docker pull $REDUCER_IMAGE
+        docker pull $KERNEL_COLLECTOR_IMAGE
+
       # chmod a+x test/kernel-headers/run-tests.sh
       # ./test/kernel-headers/run-tests.sh
 
     - name: Check on failures
       if: steps.run-kernel-header-tests.outcome != 'success'
-      run: exit 1    
+      run: exit 1
