--- a/test/kernel-headers/source/Vagrantfile
+++ b/test/kernel-headers/source/Vagrantfile
@@ -34,6 +34,10 @@ Vagrant.configure("2") do |config|
     vb.memory = "8192"
   end
 
+  config.vm.provider  :virtualbox do |vb|
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+  end
+
   config.vm.provision "file",
     source: "data/test-entrypoint.sh",
     destination: "test-entrypoint.sh"
