--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -11,9 +11,9 @@ on:
     paths:
 
 env:
-  BENV_IMAGE: ${DOCKER_HUB_URL}/benv-final
-  KERNEL_COLLECTOR_IMAGE: ${DOCKER_HUB_URL}/kernel-collector:bj-latest 
-  REDUCER_IMAGE: ${DOCKER_HUB_URL}/reducer:bj-latest
+  BENV_IMAGE: ${{ vars.DOCKER_HUB_URL }}/benv-final
+  KERNEL_COLLECTOR_IMAGE: ${{ vars.DOCKER_HUB_URL }}/kernel-collector:bj-latest 
+  REDUCER_IMAGE: ${{ vars.DOCKER_HUB_URL }}/reducer:bj-latest
 
 concurrency:
   group: build-and-test-${{ github.event.pull_request_number || github.ref }}
@@ -54,6 +54,7 @@ jobs:
 
     - name: build reducer
       run: |
+        echo $BENV_IMAGE
         echo "github.workspace = ${{ github.workspace }}"
         docker pull $BENV_IMAGE
         git submodule update  --init --recursive
@@ -220,7 +221,7 @@ jobs:
     runs-on: macos-12
     env:
       EBPF_NET_SRC_ROOT: ${{ github.workspace }}
-      DOCKER_HUB_PATH: $DOCKER_HUB_URL
+      DOCKER_HUB_PATH: ${{ vars.DOCKER_HUB_URL }}
     steps:
     - name: Check out the codebase
       uses: actions/checkout@v3
