--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -51,6 +51,8 @@ jobs:
         fetch-depth: 0
 
     - name: build reducer
+      env:
+        PASS: ${{ secrets.DOCKER_HUB_PASSWORD }}
       run: |
         echo $BENV_IMAGE
         echo "github.workspace = ${{ github.workspace }}"
@@ -67,7 +69,7 @@ jobs:
         ../build.sh reducer-docker
         git_branch="${GITHUB_REF#refs/*/}"
         git_ssh=$GITHUB_SHA | cut -c1-7
-        docker login ${{ vars.DOCKER_HUB }} -u ${{ vars.DOCKER_HUB_USERNAME }} -p ${{ vars.DOCKER_HUB_PASSWORD }}
+        docker login ${{ vars.DOCKER_HUB }} -u ${{ vars.DOCKER_HUB_USERNAME }} -p "$PASS"
         reducer_image=${{ vars.DOCKER_HUB_URL }}/reducer:$git_branch-$git_ssh
         echo $reducer_image
         docker tag reducer:latest $reducer_image
@@ -84,6 +86,8 @@ jobs:
         fetch-depth: 0
 
     - name: build kernel-collector
+      env:
+        PASS: {{ secrets.DOCKER_HUB_PASSWORD }}
       run: |
         echo "github.workspace = ${{ github.workspace }}"
         docker pull $BENV_IMAGE
@@ -99,7 +103,7 @@ jobs:
         ../build.sh kernel-collector-docker
         git_branch="${GITHUB_REF#refs/*/}"
         git_ssh=$GITHUB_SHA | cut -c1-7
-        docker login ${{ vars.DOCKER_HUB }} -u ${{ vars.DOCKER_HUB_USERNAME }} -p ${{ vars.DOCKER_HUB_PASSWORD }}
+        docker login ${{ vars.DOCKER_HUB }} -u ${{ vars.DOCKER_HUB_USERNAME }} -p "$PASS"
         kernel_collector_image=${{ vars.DOCKER_HUB_URL }}/reducer:$git_branch-$git_ssh
         echo $kernel_collector_image
         docker tag kernel-collector:latest $kernel_collector_image
