--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -72,7 +72,7 @@ jobs:
         $BENV_IMAGE \
         ../build.sh reducer-docker
         docker login ${{ vars.DOCKER_HUB }} -u ${{ vars.DOCKER_HUB_USERNAME }} -p "$PASS"
-        reducer_image=${{ vars.DOCKER_HUB_URL }}/reducer:${{ steps.date.outputs.date }}-${GITHUB_SHA:0:7}
+        reducer_image=${{ vars.DOCKER_HUB_URL }}/reducer:${{ steps.date.outputs.date }}-${GITHUB_REF#refs/*/}-${GITHUB_SHA:0:7}
         echo $reducer_image
         docker tag reducer:latest $reducer_image
         docker push $reducer_image
@@ -108,7 +108,7 @@ jobs:
         $BENV_IMAGE \
         ../build.sh kernel-collector-docker
         docker login ${{ vars.DOCKER_HUB }} -u ${{ vars.DOCKER_HUB_USERNAME }} -p "$PASS"
-        kernel_collector_image=${{ vars.DOCKER_HUB_URL }}/reducer:${{ steps.date.outputs.date }}-${GITHUB_SHA:0:7}
+        kernel_collector_image=${{ vars.DOCKER_HUB_URL }}/kernel-collector:${{ steps.date.outputs.date }}-${GITHUB_REF#refs/*/}-${GITHUB_SHA:0:7}
         echo $kernel_collector_image
         docker tag kernel-collector:latest $kernel_collector_image
         docker push $kernel_collector_image
@@ -266,7 +266,7 @@ jobs:
       id: run-kernel-header-tests
       if: steps.changes.outputs.kernel == 'true' || steps.changes.outputs.github == 'true'
       run: |
-        git_branch="${GITHUB_REF#refs/*/}"
+        git_branch=""
         git_ssh=$GITHUB_SHA | cut -c1-7
-        ./test/kernel-headers/run-tests.sh ${{ steps.date.outputs.date }}-${GITHUB_SHA:0:7}
+        ./test/kernel-headers/run-tests.sh ${{ steps.date.outputs.date }}-${GITHUB_REF#refs/*/}-${GITHUB_SHA:0:7}
 
