--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -54,6 +54,11 @@ jobs:
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
+      
     - name: build-and-push-reducer-docker-image
       env:
         PASS: ${{ secrets.DOCKER_HUB_PASSWORD }}
@@ -72,7 +77,7 @@ jobs:
         $BENV_IMAGE \
         ../build.sh reducer-docker
         docker login ${{ vars.DOCKER_HUB }} -u ${{ secrets.DOCKER_HUB_USERNAME }} -p "$PASS"
-        reducer_image=${{ vars.DOCKER_HUB_URL }}/reducer:${{ steps.date.outputs.date }}-${GITHUB_BASE_REF}-${GITHUB_SHA:0:7}
+        reducer_image=${{ vars.DOCKER_HUB_URL }}/reducer:${{ steps.date.outputs.date }}-${{ steps.extract_branch.outputs.branch }}-${GITHUB_SHA:0:7}
         echo $reducer_image
         docker tag reducer:latest $reducer_image
         docker push $reducer_image
@@ -90,6 +95,11 @@ jobs:
     - name: Get current date
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+    
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch   
 
     - name: build-and-push-kernel-collector-docker-image
       env:
@@ -108,7 +118,7 @@ jobs:
         $BENV_IMAGE \
         ../build.sh kernel-collector-docker
         docker login ${{ vars.DOCKER_HUB }} -u ${{ secrets.DOCKER_HUB_USERNAME }} -p "$PASS"
-        kernel_collector_image=${{ vars.DOCKER_HUB_URL }}/kernel-collector:${{ steps.date.outputs.date }}-${GITHUB_BASE_REF}-${GITHUB_SHA:0:7}
+        kernel_collector_image=${{ vars.DOCKER_HUB_URL }}/kernel-collector:${{ steps.date.outputs.date }}-${{ steps.extract_branch.outputs.branch }}-${GITHUB_SHA:0:7}
         echo $kernel_collector_image
         docker tag kernel-collector:latest $kernel_collector_image
         docker push $kernel_collector_image
@@ -262,11 +272,16 @@ jobs:
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch   
+
     - name: Run kernel headers test for multiple linux distributions
       id: run-kernel-header-tests
       if: steps.changes.outputs.kernel == 'true' || steps.changes.outputs.github == 'true'
       run: |
         git_branch=""
         git_ssh=$GITHUB_SHA | cut -c1-7
-        ./test/kernel-headers/run-tests.sh ${{ steps.date.outputs.date }}-${GITHUB_BASE_REF}-${GITHUB_SHA:0:7}
+        ./test/kernel-headers/run-tests.sh ${{ steps.date.outputs.date }}-${{ steps.extract_branch.outputs.branch }}-${GITHUB_SHA:0:7}
 
