--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -56,9 +56,9 @@ jobs:
 
     - name: Extract branch name
       shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_HEAD_REF})"
       id: extract_branch
-      
+
     - name: build-and-push-reducer-docker-image
       env:
         PASS: ${{ secrets.DOCKER_HUB_PASSWORD }}
@@ -95,11 +95,11 @@ jobs:
     - name: Get current date
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-    
+
     - name: Extract branch name
       shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch   
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_HEAD_REF})"
+      id: extract_branch
 
     - name: build-and-push-kernel-collector-docker-image
       env:
@@ -274,14 +274,12 @@ jobs:
 
     - name: Extract branch name
       shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch   
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_HEAD_REF})"
+      id: extract_branch
 
     - name: Run kernel headers test for multiple linux distributions
       id: run-kernel-header-tests
       if: steps.changes.outputs.kernel == 'true' || steps.changes.outputs.github == 'true'
       run: |
-        git_branch=""
-        git_ssh=$GITHUB_SHA | cut -c1-7
         ./test/kernel-headers/run-tests.sh ${{ steps.date.outputs.date }}-${{ steps.extract_branch.outputs.branch }}-${GITHUB_SHA:0:7}
 
