reusing date between jobs stages and small cleanup

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -33,6 +33,10 @@ jobs:
     - name: Check out the codebase
       uses: actions/checkout@v3
 
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT  
+
     - name: Runs format checker
       run: |
         sudo apt update
@@ -49,10 +53,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-
-    - name: Get current date
-      id: date
-      run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
     - name: build-and-push-reducer-docker-image
       env:
@@ -72,7 +72,7 @@ jobs:
         $BENV_IMAGE \
         ../build.sh reducer-docker
         docker login ${{ vars.DOCKER_HUB }} -u ${{ secrets.DOCKER_HUB_USERNAME }} -p "$PASS"
-        reducer_image=${{ vars.DOCKER_HUB_URL }}/reducer:${{ steps.date.outputs.date }}-${{github.event.pull_request.head.ref}}-${GITHUB_SHA:0:7}
+        reducer_image=${{ vars.DOCKER_HUB_URL }}/reducer:${{ clang-format-check.steps.date.outputs.date }}-${{github.event.pull_request.head.ref}}-${GITHUB_SHA:0:7}
         echo $reducer_image
         docker tag reducer:latest $reducer_image
         docker push $reducer_image
@@ -86,10 +86,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-
-    - name: Get current date
-      id: date
-      run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
     - name: build-and-push-kernel-collector-docker-image
       env:
@@ -108,7 +104,7 @@ jobs:
         $BENV_IMAGE \
         ../build.sh kernel-collector-docker
         docker login ${{ vars.DOCKER_HUB }} -u ${{ secrets.DOCKER_HUB_USERNAME }} -p "$PASS"
-        kernel_collector_image=${{ vars.DOCKER_HUB_URL }}/kernel-collector:${{ steps.date.outputs.date }}-${{github.event.pull_request.head.ref}}-${GITHUB_SHA:0:7}
+        kernel_collector_image=${{ vars.DOCKER_HUB_URL }}/kernel-collector:${{ clang-format-check.steps.date.outputs.date }}-${{github.event.pull_request.head.ref}}-${GITHUB_SHA:0:7}
         echo $kernel_collector_image
         docker tag kernel-collector:latest $kernel_collector_image
         docker push $kernel_collector_image
@@ -266,4 +262,4 @@ jobs:
       id: run-kernel-header-tests
       if: steps.changes.outputs.kernel == 'true' || steps.changes.outputs.github == 'true'
       run: |
-        ./test/kernel-headers/run-tests.sh ${{ steps.date.outputs.date }}-${{github.event.pull_request.head.ref}}-${GITHUB_SHA:0:7}
+        ./test/kernel-headers/run-tests.sh ${{ clang-format-check.steps.date.outputs.date }}-${{github.event.pull_request.head.ref}}-${GITHUB_SHA:0:7}
