--- a/collector/kernel/Dockerfile
+++ b/collector/kernel/Dockerfile
@@ -30,12 +30,8 @@ RUN if [ "$BUILD_TYPE" = "Debug" ]; then \
       install_packages bc cgdb gawk gdb gzip iputils-ping jq netcat-openbsd procps ripgrep vim valgrind; \
     fi
 
-
-#/usr/src/kernels/4.18.0-372.49.1.el8_6.x86_64
-#/lib/modules/4.18.0-372.49.1.el8_6.x86_64
-
 COPY --from=copier /usr/src/kernels/4.18.0-372.49.1.el8_6.x86_64 /usr/src
-COPY --from=copier /lib/modules/4.18.0-372.49.1.rt7.206.el8_6.x86_64  /lib/modules/
+COPY --from=copier /lib/modules/4.18.0-372.49.1.el8_6.x86_64 /lib/modules/
 
 
 COPY srv /srv
