--- a/collector/kernel/Dockerfile
+++ b/collector/kernel/Dockerfile
@@ -36,6 +36,6 @@ COPY --from=copier /lib/modules/4.18.0-372.49.1.el8_6.x86_64 /lib/modules/
 
 COPY srv /srv
 WORKDIR /srv
-RUN if [ ! -e /srv/kernel-collector ]; then \
-      ln /srv/kernel-collector-stripped /srv/kernel-collector; \
-    fi
+#RUN if [ ! -e /srv/kernel-collector ]; then \
+#      ln /srv/kernel-collector-stripped /srv/kernel-collector; \
+#    fi
