--- a/collector/kernel/Dockerfile
+++ b/collector/kernel/Dockerfile
@@ -31,7 +31,7 @@ RUN if [ "$BUILD_TYPE" = "Debug" ]; then \
     fi
 
 COPY --from=copier /usr/src/kernels/4.18.0-372.49.1.el8_6.x86_64/ /usr/src
-COPY --from=copier /lib/modules/4.18.0-372.49.1.el8_6.x86_64/ /lib/modules/
+COPY --from=copier /lib/modules/4.18.0-372.49.1.el8_6.x86_64/ /lib/modules
 
 
 #COPY srv /srv
