openshift kernel collector docker image

--- a/collector/kernel/Dockerfile
+++ b/collector/kernel/Dockerfile
@@ -31,15 +31,12 @@ RUN if [ "$BUILD_TYPE" = "Debug" ]; then \
     fi
 
 COPY --from=copier /usr/src/kernels/4.18.0-372.49.1.el8_6.x86_64/ /usr/src
-COPY --from=copier /lib/modules/4.18.0-372.49.1.el8_6.x86_64/ /lib/modules
 
 
-#COPY srv /srv
-#WORKDIR /srv
-CMD ls -ltrah /lib/modules
-ENTRYPOINT /bin/bash
+COPY srv /srv
+WORKDIR /srv
 
 
-#RUN if [ ! -e /srv/kernel-collector ]; then \
-#      ln /srv/kernel-collector-stripped /srv/kernel-collector; \
-#    fi
+RUN if [ ! -e /srv/kernel-collector ]; then \
+      ln /srv/kernel-collector-stripped /srv/kernel-collector; \
+    fi
